--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ bin-release/
 /inheritanceRelationship_01/nbproject/private/
 /nbproject/private/
 /labtestoop/nbproject/private/
+/SuperShopApp/nbproject/private/
