HTML Practice start

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ bin-release/
 /nbproject/private/
 /labtestoop/nbproject/private/
 /SuperShopApp/nbproject/private/
+/HTML5Application/nbproject/private/
